<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:padding="4dp"

    >

    <android.support.v7.widget.CardView

        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"

            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_address"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/primary_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_email_address"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/subject"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/primary_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject_hint"
                android:inputType="textEmailSubject"
                android:textColor="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/primary_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/what_s_in_your_mind"
                android:lines="5"
                android:textColor="@color/secondary_text" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/send_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card"
        android:layout_marginTop="16dp"
        android:background="@color/primary"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textColor="@color/icons" />


</RelativeLayout>
