<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"

    tools:context="com.example.android.myproject.Spelling.SpellActivity">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/score"
        android:textColor="@color/secondary_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score_spelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/score"
        android:layout_alignBottom="@+id/score"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/_0"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question_splling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/score"
        android:layout_marginTop="62dp"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/beginner"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/end_quizSpelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="13dp"

        android:layout_marginRight="13dp"
        android:padding="12dp"
        android:text="@string/end_quiz"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_one_spelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/score"
        android:layout_alignStart="@+id/score"
        android:layout_below="@+id/question_splling"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="106dp"
        android:background="@color/accent"
        android:text="@string/_1"
        android:textColor="@color/icons" />

    <Button
        android:id="@+id/button_two_spelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_one_spelling"
        android:layout_alignBottom="@+id/button_one_spelling"
        android:layout_centerHorizontal="true"
        android:background="@color/accent"
        android:text="@string/_2"
        android:textColor="@color/icons" />

    <Button
        android:id="@+id/button_three_spelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_two_spelling"
        android:layout_alignBottom="@+id/button_two_spelling"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/button_two_spelling"
        android:layout_toRightOf="@+id/button_two_spelling"
        android:background="@color/accent"
        android:text="@string/_3"
        android:textColor="@color/icons" />


</RelativeLayout>
