<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView_bookmark_readIt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/imageView_addTofavorite"
                    android:layout_marginLeft="23dp"
                    android:layout_marginStart="23dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_bookmark" />

                <ImageView
                    android:id="@+id/imageView_addTofavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"
                    android:padding="12dp"
                    android:src="@drawable/ic_addto_favorite" />

                <RelativeLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/the_word_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:padding="4dp"
                        android:text="@string/the_word_goes_here"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/primary_text" />

                    <ImageView
                        android:id="@+id/imageView_play_sound"
                        android:layout_width="match_parent"
                        android:layout_height="45sp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_play_button" />
                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/easyEnglish_arabic_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/arabic"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_in_arabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/easyEnglish_arabic_label"
                    android:gravity="center"
                    android:paddingBottom="12sp"
                    android:paddingTop="8dp"
                    android:singleLine="false"
                    android:text="@string/meaningArabic"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/easyEnglish_english_label_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/english"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_in_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/easyEnglish_english_label_label"
                    android:gravity="center"
                    android:paddingBottom="12sp"
                    android:paddingTop="8dp"
                    android:singleLine="false"
                    android:text="@string/meaningEnglish"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_play_soundEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="45sp"
                    android:layout_below="@+id/text_in_english"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_play_button" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="2dp">

            <RelativeLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/easyEnglish_example_label_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="@string/example"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/example_in_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/easyEnglish_example_label_label"
                    android:gravity="center"
                    android:paddingBottom="12sp"
                    android:paddingTop="8dp"
                    android:singleLine="false"
                    android:text="@string/ExampleEnglish"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_play_soundExample"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_below="@+id/example_in_english"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_play_button" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>